<resources>
    <string name="app_name">StudyBuddy-Aarzoo</string>
    <string name="app">Study Buddy</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="userName_hint">Full Name</string>
    <string name="email_hint">Email</string>
    <string name="login_button">Login</string>
    <string name="sign_button">Sign Up</string>
    <string name="login_here">Already have an account? Login here!</string>
    <string name="sign_up">Don\'t have an account? Sign up here!</string>
    <string name="password_field_name">password</string>
    <string name="reset_password_heading">Set New Password</string>
    <string name="confirm_password_field_name">confirmPassword</string>
    <string name="create_account_heading">Create Account</string>
    <string name="forgot_password_subheading">No worries, we\'ll send you reset instructions.</string>
    <string name="email_password">Enter your email</string>
    <string name="back_to_login">Back to Login</string>
    <string name="reset_password_email">Reset Password</string>
    <string name="new_password_hint">Enter new password</string>
    <string name="new_confirm_password_hint">Re-type new password</string>
    <string name="email_send_confirmation">We\'ve processed your request. If the email address is linked to an account, you\'ll receive reset instructions soon.</string>

    <!-- Field name for Signup activity -->
    <string name="password">password</string>
    <string name="confirm_password">confirmPassword</string>

    <!-- Login Page messages here -->
    <string name="user_not_present">You are not registered. Please sign up!</string>
    <string name="password_doesnot_match">Password is incorrect!</string>

    <!-- Adding SIGN-UP page error and success messages here -->
    <string name="empty_name">Name cannot be empty!</string>
    <string name="empty_email">Email cannot be empty!</string>
    <string name="invalid_email">Invalid email format!</string>
    <string name="empty_password">Password cannot be empty!</string>
    <string name="password_no_match">Passwords do not match!</string>
    <string name="added_successfully">You have been added successfully! You will now be redirected to the login page where you need to login to find your buddy!</string>
    <string name="not_added_successfully">There has been some error in processing your request. Please try again later.</string>
    <string name="existing_member">This email already exists. Please click on the Already a Member link to Login!</string>
</resources>